--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,8 @@ justify-content:center;
 	font-size:18px;
 	color:white;
 	border-radius:12.5%;
-	padding:0% 3%;
+	padding:0% 5%;
+	width: 30%;
 	margin:1% ;
     cursor:pointer;
     text-align: center;
